# uuid-test

./: Cargo.toml  uuid-test_0.1.0.bb
src/: main.rs
